fix: Wallpaper overlay was too dark
In recent cozy-ui updates we did some changes on Layout components and the background-color: white was not applied to the correct component anymore.

--- a/src/styles/app.styl
+++ b/src/styles/app.styl
@@ -24,9 +24,6 @@ body
         overflow auto
 
 .App
-    // Avoid mix-blend-mode from home-custom-background to be linked to the background color of the body.
-    // Must not be responsive to the theme.
-    background-color white
     overflow-y overlay
 
     &.custom-wallpaper
